--- a/package.json
+++ b/package.json
@@ -21,12 +21,6 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.0",
-    "prisma": "^5.22.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "prisma": "^5.22.0"
   }
 }
