--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "projectstationbackend": "file:",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
