--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "projectstationbackend": "file:",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
