--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "build": "prisma generate && nodemon index.js",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+     "start": "node index.js" 
   },
   "author": "WBT",
   "license": "ISC",
