--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "build": "prisma generate && nodemon index.js",
     "prisma:generate": "prisma generate",
-     "start": "node index.js" 
+    "start": "node index.js"
   },
   "author": "WBT",
   "license": "ISC",
@@ -21,9 +21,11 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "projectstationbackend": "file:",
+    "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
