--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.6",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "projectstationbackend": "file:",
