--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pm2": "^5.4.3",
     "projectstationbackend": "file:",
     "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
