--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "WBT",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.6",
     "multer": "^1.4.5-lts.1",
