Fix:schema of the message

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "WBT",
   "license": "ISC",
   "dependencies": {
+    "@mongodb-js/zstd": "^2.0.1",
     "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
