--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,19 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v3
 
-      - name: Deploy Application
+      - name: Create .env file from GitHub Secrets
         run: |
-          echo "🎯 Switching to app directory"
-          cd ~/Desktop/ProjectStationBE
+          cat <<EOF > $GITHUB_WORKSPACE/.env
+          PORT=${{ secrets.PORT }}
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          SECRET=${{ secrets.SECRET }}
+          APP_PASSWORD=${{ secrets.APP_PASSWORD }}
+          EMAIL=${{ secrets.EMAIL }}
+          EOF
 
-          echo "🧼 Resetting local repo to match origin/main"
-          git pull origin main
-
+      - name: Deploy Application
+        working-directory: ${{ github.workspace }}
+        run: |
           echo "📦 Installing dependencies"
           npm install
 
@@ -30,11 +35,11 @@ jobs:
           npx prisma db push
 
           echo "🚀 Restarting application with PM2"
-          pm2 stop app1 app2 app3
-          pm2 delete app1 app2 app3
-          PORT=3000 pm2 start index.js --name app1
-          PORT=3001 pm2 start index.js --name app2
-          PORT=3002 pm2 start index.js --name app3
+          pm2 stop app1 app2 app3 || true
+          pm2 delete app1 app2 app3 || true
+          PORT=3000 pm2 start index.js --name app1 --cwd $GITHUB_WORKSPACE
+          PORT=3001 pm2 start index.js --name app2 --cwd $GITHUB_WORKSPACE
+          PORT=3002 pm2 start index.js --name app3 --cwd $GITHUB_WORKSPACE
           pm2 save
 
       - name: Notify on Discord
