--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.6",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.1.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.10",
     "pm2": "^5.4.3",
