feat: Add test script and update package.json for Jest and Supertest
feat: Enhance Fabricator model with currencyType field

fix: Update parent-child relationships in DesignDrawingsResponses, SubmittalsResponse, RFIResponse, RFQResponse, ChangeOrdertable, COResponse, and GroupUser models to include onDelete: Cascade

feat: Implement deleteAccountInfo controller in accountInfo.js

fix: Update dashboardNumbers controller to include USER_FAULT in task completion count

fix: Modify task.js to consider USER_FAULT in blocked tasks

feat: Add logging to working hours controller for better traceability

feat: Enhance invoice creation and update logic to include invoice number generation

refactor: Clean up and improve error handling in working hours controller

chore: Remove unused test-scheduler.js file

feat: Implement invoiveNumberGenerator utility for dynamic invoice number generation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "build": "prisma generate && nodemon index.js",
     "prisma:generate": "prisma generate",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "author": "WBT",
   "license": "ISC",
@@ -38,6 +39,9 @@
   },
   "devDependencies": {
     "@prisma/client": "^6.10.1",
-    "prisma": "^6.10.1"
+    "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
+    "prisma": "^6.10.1",
+    "supertest": "^7.1.4"
   }
 }
